; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_draw-scale-simple.c_simple.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_draw-scale-simple.c_simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i32*, float)* @simple to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @simple(i32* %0, float %1) #0 {
  %3 = alloca float, align 4
  %4 = alloca i32*, align 8
  %5 = alloca float, align 4
  store i32* %0, i32** %4, align 8
  store float %1, float* %5, align 4
  %6 = load float, float* %5, align 4
  %7 = fcmp oge float %6, 1.000000e+00
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store float 0.000000e+00, float* %3, align 4
  br label %18

9:                                                ; preds = %2
  %10 = load float, float* %5, align 4
  %11 = fmul float 2.000000e+00, %10
  %12 = fsub float %11, 3.000000e+00
  %13 = load float, float* %5, align 4
  %14 = fmul float %12, %13
  %15 = load float, float* %5, align 4
  %16 = fmul float %14, %15
  %17 = fadd float 1.000000e+00, %16
  store float %17, float* %3, align 4
  br label %18

18:                                               ; preds = %9, %8
  %19 = load float, float* %3, align 4
  ret float %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
